IaC_Terraform/work/ex03/route.tf
resource "aws_internet_gateway" "kosta_igw" {
  vpc_id = aws_vpc.kosta_vpc.id

  tags = {
    Name = "kosta-igw"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.kosta_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.kosta_igw.id
  }

  tags = {
    Name = "kosta-public-rt"
  }
}

resource "aws_route_table_association" "public_1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_2" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public.id
}
