IaC_Terraform/work/ex03/vpc.tf
resource "aws_vpc" "kosta_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "kosta-vpc"
  }
}
